--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -2,5 +2,6 @@
 @import 'map-link';
 @import 'map-bar';
 @import 'map-control-corners';
+@import 'map-control-composition';
 @import 'map-attribution-control';
 @import 'map-zoom-control';
